<resources>
    <!-- Normal Texts -->
    <string name="app_name">RepTide</string>
    <string name="workout_fragment">All Workouts</string>
    <string name="exercise_fragment">All Exercises</string>
    <string name="history_fragment">All History</string>

    <!-- Placeholder Texts -->
    <string name="stats_text">Total Workouts: %1$d\nTotal Exercises: %2$d</string>

    <string name="workout_details_title">Details: %1$s</string>
    <string name="workout_type">Type: %1$s</string>
    <string name="workout_count">%1$d Exercises</string>
    <string name="workout_duration">%1$d Mins</string>

    <string name="manage_workout">%1$s Workout</string>
    <string name="manage_exercise">%1$s Exercise</string>

    <string name="exercise_details_title">Details: %1$s</string>
    <string name="history_details_title">Details: %1$s</string>

    <string name="update_exercise">Update Exercise: %1$s</string>
    <string name="update_workout">Update Workout: %1$s</string>
    <string name="exercise_sets">%1$d Sets</string>
    <string name="exercise_reps">%1$d Reps</string>

    <!--  Sets  -->
    <string name="set_num">Set %1$d</string>

    <string name="exercise_duration">Duration: %1$d</string>
    <string name="total_volume_lifted">%1$d kgs</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="placeholder_50">e.g. 50</string>
    <string name="placeholder_10">e.g. 10</string>
    <string name="reps">Reps</string>
    <string name="workout_placeholder">Push Day</string>
    <string name="placeholder_exercises_count">4 Exercises</string>
    <string name="placeholder_date">21 Sept 2025</string>
    <string name="exercise_placeholder">Running</string>
    <string name="type_placeholder">Cardio</string>
    <string name="duration_placeholder">Duration: 45 min</string>
    <string name="exercise_group_placeholder">Reps: 12 | Sets: 3</string>
    <string name="edit">Edit</string>
    <string name="start_workout_button">Start Workout</string>
    <string name="finish_workout_button">Finish Workout</string>
    <string name="last_category">Last Category</string>
    <string name="pr_placeholder">200</string>
    <string name="kgs_pr">kgs (PR)</string>
    <string name="volume_lifted_7_days">Volume Lifted (7 Days)</string>
    <string name="weight_progress">Weight Progress</string>
    <string name="start">Start</string>
    <string name="completed_dt_placeholder">Completed: Oct 05, 2025 • 10:15 PM</string>
    <string name="exercises">Exercises</string>
    <string name="workouts">Workouts</string>
    <string name="category_placeholder">Category: %1$s</string>
    <string name="name">Name</string>
    <string name="enter_workout_name">Enter Workout Name</string>
    <string name="type">Type</string>
    <string name="submit">Submit</string>
    <string name="add_edit">Add/Edit</string>
    <string name="enter_exercise_name">Enter Exercise Name</string>
    <string name="category">Category</string>
    <string name="sets">Sets</string>
    <string name="history">History</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="delete_confirmation">Are you sure you want to delete this item?</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="empty_exercise_text">No exercises to show</string>
    <string name="empty_workout_text">No workouts to show</string>
    <string name="empty_history_text">No histories to show</string>
    <string name="choose_rest_duration">Choose Rest Duration</string>
    <string name="_30s">30s</string>
    <string name="_60s">60s</string>
    <string name="_90s">90s</string>
    <string name="_00_00">00:00</string>
    <string name="skip">Skip</string>
    <string name="last_workout">Last Workout</string>

</resources>