<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="@dimen/l"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/m"
    android:background="@drawable/dialog_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_rest_duration"
        android:textColor="@color/white"
        android:textSize="@dimen/tx_xxxl"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/m"/>

    <RadioGroup
        android:id="@+id/radioGroupTime"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radio30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_30s"
            android:textColor="@color/white"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radio60"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_60s"
            android:textColor="@color/white"
            android:layout_marginStart="@dimen/m"/>

        <RadioButton
            android:id="@+id/radio90"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_90s"
            android:textColor="@color/white"
            android:layout_marginStart="@dimen/m"/>

        <RadioButton
            android:id="@+id/radioSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip"
            android:textColor="@color/white"/>
    </RadioGroup>

    <TextView
        android:id="@+id/tvTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_00_00"
        android:textSize="@dimen/tx_xxl"
        android:textColor="@color/white"
        android:visibility="gone"
        android:layout_marginTop="@dimen/m"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginTop="@dimen/m">

        <!-- Cancel Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginEnd="@dimen/s"
            style="@style/Widget.Material3.Button.TextButton" />

        <!-- Start Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            style="@style/Widget.Material3.Button" />

    </LinearLayout>

</LinearLayout>
