<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.manageWorkout.BaseManageWorkoutFragment">

    <!--  ToolBar (Header)  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:layout_margin="@dimen/m"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/add_edit"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_margin="@dimen/m"
            android:textSize="@dimen/tx_xxxxl" />
    </LinearLayout>

    <!--  Edit Text ll block  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="@dimen/xl">

        <!--    Name    -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="@dimen/tx_xl"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/s"
            android:background="@drawable/edit_text_background"
            android:hint="@string/enter_exercise_name"
            android:inputType="textMultiLine"
            android:maxLines="2"
            android:padding="@dimen/xs"
            android:scrollbars="vertical" />

        <!--    Exercise Category    -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xxxl"
            android:text="@string/category"
            android:textSize="@dimen/tx_xl"
            android:textStyle="bold" />


        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xxs"
            app:chipSpacing="@dimen/s"
            app:singleLine="true"
            app:singleSelection="true"/>

        <!--    Sets    -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xxxl"
            android:text="@string/sets"
            android:textSize="@dimen/tx_xl"
            android:textStyle="bold" />

        <NumberPicker
            android:id="@+id/npSets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <!--    Reps    -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xxxl"
            android:text="@string/reps"
            android:textSize="@dimen/tx_xl"
            android:textStyle="bold" />

        <NumberPicker
            android:id="@+id/npReps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <!--  Submit button  -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/xl"
        android:paddingTop="@dimen/xl"
        android:paddingBottom="@dimen/xl"
        android:text="@string/submit"
        app:cornerRadius="@dimen/s" />

</LinearLayout>