<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/m"
    app:cardCornerRadius="@dimen/m"
    app:cardElevation="@dimen/xxxs"
    android:layout_margin="@dimen/xs"
    android:foreground="?attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:orientation="vertical"
        android:padding="@dimen/xl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvWorkoutName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/workout_placeholder"
            android:textStyle="bold"
            android:textColor="@color/orange"
            android:textSize="@dimen/tx_xxxl" />

        <TextView
            android:id="@+id/tvWorkoutType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exercise_placeholder"
            android:textSize="@dimen/tx_m"
            android:textColor="?attr/colorOnSurfaceVariant"
            android:layout_marginTop="@dimen/xxxs" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvWorkoutDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duration_placeholder"
                android:layout_marginTop="@dimen/xxs"
                android:textSize="@dimen/tx_s" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/tvCompletionDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_date"
                android:layout_marginTop="@dimen/xxs"
                android:textSize="@dimen/tx_s" />
        </LinearLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
