<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:id="@+id/cvWorkout"
    app:cardBackgroundColor="@color/dark_gray"
    app:cardCornerRadius="@dimen/xxl"
    app:cardElevation="@dimen/xxxs">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/xl">

        <!-- Workout Name -->
        <TextView
            android:id="@+id/tvWorkoutName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/workout_placeholder"
            android:textColor="@color/orange"
            android:textSize="@dimen/tx_xxxl"
            android:textStyle="bold"
            android:maxLines="1"
            android:ellipsize="end" />

        <!-- Workout Type -->
        <TextView
            android:id="@+id/tvWorkoutType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/tx_l"
            android:text="@string/workout_type"
            android:textColor="?attr/colorOnPrimaryContainer"
            android:layout_marginTop="@dimen/xxxs" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/xxxxs">
            <!-- Exercise count -->
            <TextView
                android:id="@+id/tvExerciseCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/tx_s"
                android:text="@string/placeholder_exercises_count"
                android:textColor="?attr/colorOnPrimaryContainer"
                android:layout_marginTop="@dimen/xxxxs" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <!-- Timestamp (for history) -->
            <TextView
                android:id="@+id/tvWorkoutDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/tx_s"
                android:text="@string/placeholder_date"
                android:textColor="?attr/colorOnPrimaryContainer"
                android:layout_marginTop="@dimen/xxxxs" />
        </LinearLayout>


    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
